src/css/home.css
.home {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;

    .home-hero {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        max-height: 90vh;
        overflow: hidden;
        position: relative;

        .home-hero-title {
            position: absolute;
            top: 2rem;
            color: var(--color-background);
            font-size: 2.5rem;
        }

        .home-hero-img {
            margin-left: 45%;
            height: auto;
            width: auto;
            object-fit: contain;
        }

        .home-hero-credits {
            align-self: center;
            font-size: 0.8rem;
        }
    }
}

@media (min-width: 390px) {
    .home {
        .home-hero {
            .home-hero-img {
                margin-left: 40%;
            }
        }
    }
}

@media (min-width: 450px) {
    .home {
        .home-hero {
            .home-hero-img {
                margin-left: 20%;
            }
        }
    }
}

@media (min-width: 545px) {
    .home {
        .home-hero {
            .home-hero-img {
                margin-left: 10%;
            }
        }
    }
}

@media (min-width: 720px) {
    .home {
        .home-hero {
            .home-hero-img {
                margin-left: 0rem;
            }
        }
    }
}

